--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -17,7 +17,7 @@
     <br>
     <label for="myInput">Input:</label>
     <!-- <input type="text" id="myInput"><button id="addInput" onclick="writeInput()">Write</button> -->
-    <form onsubmit="writeInput(event)">
+    <form>
         <input type="text" id="myInput"><button id="addInput">Write</button>
     </form>
     <div id="output">
