--- a/Event-Handling/counter/index.html
+++ b/Event-Handling/counter/index.html
@@ -15,11 +15,11 @@
             <br>
             <br>
             <div id="counterButtons">
-                <button onclick="updateCounter(-5)" id="minusFiveButton">-5</button>
-                <button onclick="updateCounter(-1)">-1</button>
+                <button onclick="updateCounter(event)" id="minusFiveButton">-5</button>
+                <button onclick="updateCounter(event)">-1</button>
                 <button onclick="resetCounter()">R</button>
-                <button onclick="updateCounter(1)">+1</button>
-                <button onclick="updateCounter(5)">+5</button>
+                <button onclick="updateCounter(event)">+1</button>
+                <button onclick="updateCounter(event)">+5</button>
             </div>
         </section>
         <section id="output">
