--- a/Event-Handling/counter/index.html
+++ b/Event-Handling/counter/index.html
@@ -15,11 +15,13 @@
             <br>
             <br>
             <div id="counterButtons">
-                <button onclick="updateCounter(event)" id="minusFiveButton">-5</button>
-                <button onclick="updateCounter(event)">-1</button>
-                <button onclick="resetCounter()">R</button>
-                <button onclick="updateCounter(event)">+1</button>
-                <button onclick="updateCounter(event)">+5</button>
+                <button>-10</button>
+                <button id="minusFiveButton">-5</button>
+                <button>-1</button>
+                <button>R</button>
+                <button>+1</button>
+                <button>+5</button>
+                <button>+10</button>
             </div>
         </section>
         <section id="output">
